style(til/git): Remove unintended numbering in Git guide

--- a/git/241215001_git_setup.md
+++ b/git/241215001_git_setup.md
@@ -31,20 +31,20 @@
 
 ## How to Start
 
-1.  원격 저장소(GitHub, GitLab 등)를 로컬 컴퓨터에 복제
-2.  `$ git clone {username/repo-addr}`
-3.  복제한 저장소의 디렉토리로 이동
-4.  `$ cd {repo-addr}`
-5.  저장소 내의 파일 수정
-6.  `$ vi README.md`
-7.  현재 작업 디렉토리의 상태 확인 (변경, 추가 삭제 상태 표시)
-8.  `$ git status`
-9.  수정된 파일을 스테이징 영역에 추가 (커밋 준비 단계)
-10.  `$ git add README.md`
-11.  스테이징된 파일을 저장소에 커밋 (변경사항 기록하는 스냅샷)
-12.  `$ git commit`
-13.  로컬 저장소에서 만든 커밋을 원격 저장소로 푸시
-14.  `$git push origin main`
+1. 원격 저장소(GitHub, GitLab 등)를 로컬 컴퓨터에 복제
+    `$ git clone {username/repo-addr}`
+2. 복제한 저장소의 디렉토리로 이동
+    `$ cd {repo-addr}`
+3. 저장소 내의 파일 수정
+    `$ vi README.md`
+4.  현재 작업 디렉토리의 상태 확인 (변경, 추가 삭제 상태 표시)
+    `$ git status`
+5.  수정된 파일을 스테이징 영역에 추가 (커밋 준비 단계)
+    `$ git add README.md`
+6. 스테이징된 파일을 저장소에 커밋 (변경사항 기록하는 스냅샷)
+    `$ git commit`
+7.  로컬 저장소에서 만든 커밋을 원격 저장소로 푸시
+    `$git push origin main`
 
 ## Conventional Commits
 
