feat(til/ml): Add missing sections to python and ml preprocessing notebook

--- a/ml/250114001_ml_preprocessing_basics.ipynb
+++ b/ml/250114001_ml_preprocessing_basics.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OS 모듈"
+    "### `OS` 모듈"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### os.path.join\n",
+    "#### `os.path.join`\n",
     "- 여러 경로 결합하여 하나의 경로 반환"
    ]
   },
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### os.path.dirname\n",
+    "#### `os.path.dirname`\n",
     "- 파일 경로에서 디렉토리 경로 반환"
    ]
   },
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### os.path.abspath\n",
+    "#### `os.path.abspath`\n",
     "- 현재 작업 디렉토리 기준으로 절대 경로 반환"
    ]
   },
@@ -91,14 +91,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dict"
+    "### `dict`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### dict + zip\n",
+    "#### `dict` + `zip`\n",
     "- 두 리스트를 병합하여 딕셔너리 생성"
    ]
   },
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### dict + enumerate\n",
+    "#### `dict` + `enumerate`\n",
     "- 리스트의 각 항목에 인덱스 매핑"
    ]
   },
@@ -155,14 +155,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LabelEncoder"
+    "### `LabelEncoder`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### transform\n",
+    "#### `transform`\n",
     "- 학습된 라벨 정보를 사용하여 데이터를 숫자로 변환 ex) 범주형 데이터 정수형 변환"
    ]
   },
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### fit_transform\n",
+    "#### `fit_transform`\n",
     "- 데이터를 학습하고 즉시 변환 (라벨 인코딩 한 번에 수행)"
    ]
   },
@@ -220,27 +220,177 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### StandardScaler"
+    "### `StandardScaler`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### transform\n",
+    "#### `transform`\n",
     "- 데이터를 학습된 평균과 표준편차를 사용하여 변환 (데이터 스케일링)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.22474487 -1.22474487]\n",
+      " [ 0.          0.        ]\n",
+      " [ 1.22474487  1.22474487]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "import numpy as np\n",
     "\n",
-    "data = np.array([[1.0, 2.0], [2.0, 4.0], [3.0, 6.0]])"
+    "data = np.array([[1.0, 2.0], [2.0, 4.0], [3.0, 6.0]])\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(data)\n",
+    "\n",
+    "scaled = scaler.transform(data)\n",
+    "print(scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `fit_transform`\n",
+    "- 데이터를 학습하고 즉시 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.22474487 -1.22474487]\n",
+      " [ 0.          0.        ]\n",
+      " [ 1.22474487  1.22474487]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled = scaler.fit_transform(data)\n",
+    "print(scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `@property`\n",
+    "- 메서드를 속성처럼 호출할 수 있도록 하는 데코레이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Example:\n",
+    "    def __init__(self, value):\n",
+    "        self._value = value\n",
+    "    \n",
+    "    @property\n",
+    "    def value(self):\n",
+    "        return self._value\n",
+    "    \n",
+    "obj = Example(42)\n",
+    "print(obj.value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 특수 메서드"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `__len__`\n",
+    "- 객체의 길이를 반환하는 메서드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyList:\n",
+    "    def __init__(self, items):\n",
+    "        self.items = items\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.items)\n",
+    "    \n",
+    "obj = MyList([1, 2, 3])\n",
+    "print(len(obj))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `__getitem__`\n",
+    "- 객체에서 특정 인덱스의 값을 반환하슨 메서드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyList:\n",
+    "    def __init__(self, items):\n",
+    "        self.items = items\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.items[idx]\n",
+    "    \n",
+    "obj = MyList([1, 2, 3])\n",
+    "print(obj[1])"
    ]
   }
  ],
